style: fixes title's text overflow

--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -8,23 +8,23 @@
     flex-direction: column;
     justify-content: center;
     padding: 0.75rem 0.5rem;
-    width: 200px;
+    width: 70%;
+    cursor: pointer;
 }
 
-.itemList div h2 {
+.itemList div h2, .description {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 200px;
+    max-width: 100%;
+}
+
+.itemList div h2 {
     margin-bottom: 0.5rem;
     font-size: 20px;
 }
 
 .itemList .description {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    max-width: 200px;
     color: #7d7d7d;
 }
 
@@ -39,6 +39,7 @@
     font-size: 0.8rem;
     height: 2rem;
     width: 3rem;
+    cursor: pointer;
 }
 
 .itemList .pending {
